src/main/java/parser/.antlr/ParserParser.java
// Generated from /home/tcabral-pyyne/Desktop/compiler-design/src/main/java/parser/Parser.g4 by ANTLR 4.9.2

    package parser;

    import src.main.java.ast.*;

    import java.util.List;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER_LITERAL=1, FLOAT_LITERAL=2, CHAR_LITERAL=3, TRUE_LITERAL=4, FALSE_LITERAL=5, 
		NULL_LITERAL=6, IDENTIFIER=7, TYPE_KEYWORD=8, DATA_KEYWORD=9, INT_KEYWORD=10, 
		CHAR_KEYWORD=11, FLOAT_KEYWORD=12, BOOL_KEYWORD=13, IF_KEYWORD=14, ELSE_KEYWORD=15, 
		ITERATE_KEYWORD=16, READ_KEYWORD=17, PRINT_KEYWORD=18, RETURN_KEYWORD=19, 
		NEW_KEYWORD=20, EQUALITY=21, INEQUALITY=22, GREATER_THAN_OR_EQUAL=23, 
		LESS_THAN_OR_EQUAL=24, GREATER_THAN=25, LESS_THAN=26, ASSIGNMENT=27, ADDITION=28, 
		SUBTRACTION=29, MULTIPLICATION=30, DIVISION=31, MODULUS=32, AND=33, OR=34, 
		NEGATION=35, OPEN_PARENTHESIS=36, CLOSE_PARENTHESIS=37, OPEN_BRACE=38, 
		CLOSE_BRACE=39, OPEN_BRACKET=40, CLOSE_BRACKET=41, COMMA=42, SEMICOLON=43, 
		TYPE_ASSIGNMENT=44, COLON=45, DOT=46, NEWLINE=47, WS=48, LINE_COMMENT=49, 
		COMMENT=50, CHAR=51;
	public static final int
		RULE_prog = 0, RULE_data = 1, RULE_decl = 2, RULE_func = 3, RULE_params = 4, 
		RULE_type = 5, RULE_btype = 6, RULE_cmd = 7, RULE_exp = 8, RULE_rexp = 9, 
		RULE_aexp = 10, RULE_mexp = 11, RULE_sexp = 12, RULE_pexp = 13, RULE_lvalue = 14, 
		RULE_exps = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "data", "decl", "func", "params", "type", "btype", "cmd", "exp", 
			"rexp", "aexp", "mexp", "sexp", "pexp", "lvalue", "exps"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'true'", "'false'", "'null'", null, null, "'data'", 
			"'Int'", "'Char'", "'Float'", "'Bool'", "'if'", "'else'", "'iterate'", 
			"'read'", "'print'", "'return'", "'new'", "'=='", "'!='", "'>='", "'<='", 
			"'>'", "'<'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", 
			"'!'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "'::'", 
			"':'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTEGER_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", "TRUE_LITERAL", 
			"FALSE_LITERAL", "NULL_LITERAL", "IDENTIFIER", "TYPE_KEYWORD", "DATA_KEYWORD", 
			"INT_KEYWORD", "CHAR_KEYWORD", "FLOAT_KEYWORD", "BOOL_KEYWORD", "IF_KEYWORD", 
			"ELSE_KEYWORD", "ITERATE_KEYWORD", "READ_KEYWORD", "PRINT_KEYWORD", "RETURN_KEYWORD", 
			"NEW_KEYWORD", "EQUALITY", "INEQUALITY", "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", 
			"GREATER_THAN", "LESS_THAN", "ASSIGNMENT", "ADDITION", "SUBTRACTION", 
			"MULTIPLICATION", "DIVISION", "MODULUS", "AND", "OR", "NEGATION", "OPEN_PARENTHESIS", 
			"CLOSE_PARENTHESIS", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"COMMA", "SEMICOLON", "TYPE_ASSIGNMENT", "COLON", "DOT", "NEWLINE", "WS", 
			"LINE_COMMENT", "COMMENT", "CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public Program ast;
		public DataContext data1;
		public FuncContext func1;
		public List<DataContext> data() {
			return getRuleContexts(DataContext.class);
		}
		public DataContext data(int i) {
			return getRuleContext(DataContext.class,i);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ProgContext)_localctx).ast =  new Program(0, 0);
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DATA_KEYWORD) {
				{
				{
				setState(33);
				((ProgContext)_localctx).data1 = data();
				_localctx.ast.pushData(((ProgContext)_localctx).data1.ast);
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(41);
				((ProgContext)_localctx).func1 = func();
				_localctx.ast.pushFunc(((ProgContext)_localctx).func1.ast);
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataContext extends ParserRuleContext {
		public Data ast;
		public Token data1;
		public Token id;
		public DeclContext decl1;
		public TerminalNode OPEN_BRACE() { return getToken(ParserParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(ParserParser.CLOSE_BRACE, 0); }
		public TerminalNode DATA_KEYWORD() { return getToken(ParserParser.DATA_KEYWORD, 0); }
		public TerminalNode TYPE_KEYWORD() { return getToken(ParserParser.TYPE_KEYWORD, 0); }
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public DataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data; }
	}

	public final DataContext data() throws RecognitionException {
		DataContext _localctx = new DataContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_data);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((DataContext)_localctx).data1 = match(DATA_KEYWORD);
			setState(50);
			((DataContext)_localctx).id = match(TYPE_KEYWORD);
			((DataContext)_localctx).ast =  new Data((((DataContext)_localctx).data1!=null?((DataContext)_localctx).data1.getLine():0), (((DataContext)_localctx).data1!=null?((DataContext)_localctx).data1.getCharPositionInLine():0), (((DataContext)_localctx).id!=null?((DataContext)_localctx).id.getText():null));
			setState(52);
			match(OPEN_BRACE);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(53);
				((DataContext)_localctx).decl1 = decl();
				_localctx.ast.pushDeclaration(((DataContext)_localctx).decl1.ast);
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Parameter ast;
		public Token id;
		public TypeContext type;
		public TerminalNode TYPE_ASSIGNMENT() { return getToken(ParserParser.TYPE_ASSIGNMENT, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ParserParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ParserParser.IDENTIFIER, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			((DeclContext)_localctx).id = match(IDENTIFIER);
			setState(64);
			match(TYPE_ASSIGNMENT);
			setState(65);
			((DeclContext)_localctx).type = type(0);
			((DeclContext)_localctx).ast =  new Parameter((((DeclContext)_localctx).id!=null?((DeclContext)_localctx).id.getLine():0), (((DeclContext)_localctx).id!=null?((DeclContext)_localctx).id.getCharPositionInLine():0), (((DeclContext)_localctx).id!=null?((DeclContext)_localctx).id.getText():null), ((DeclContext)_localctx).type.ast);
			setState(67);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public Function ast;
		public Token id;
		public ParamsContext params;
		public TypeContext returnType1;
		public TypeContext returnType2;
		public CmdContext cmd;
		public TerminalNode OPEN_PARENTHESIS() { return getToken(ParserParser.OPEN_PARENTHESIS, 0); }
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(ParserParser.CLOSE_PARENTHESIS, 0); }
		public TerminalNode OPEN_BRACE() { return getToken(ParserParser.OPEN_BRACE, 0); }
		public TerminalNode CLOSE_BRACE() { return getToken(ParserParser.CLOSE_BRACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ParserParser.IDENTIFIER, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ParserParser.COLON, 0); }
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserParser.COMMA, i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			((FuncContext)_localctx).id = match(IDENTIFIER);
			((FuncContext)_localctx).ast =  new Function((((FuncContext)_localctx).id!=null?((FuncContext)_localctx).id.getLine():0), (((FuncContext)_localctx).id!=null?((FuncContext)_localctx).id.getCharPositionInLine():0), (((FuncContext)_localctx).id!=null?((FuncContext)_localctx).id.getText():null));
			setState(71);
			match(OPEN_PARENTHESIS);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(72);
				((FuncContext)_localctx).params = params();
				_localctx.ast.setParameters(((FuncContext)_localctx).params.ast);
				}
			}

			setState(77);
			match(CLOSE_PARENTHESIS);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(78);
				match(COLON);
				setState(79);
				((FuncContext)_localctx).returnType1 = type(0);
				_localctx.ast.pushReturnType(((FuncContext)_localctx).returnType1.ast);
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(81);
					match(COMMA);
					setState(82);
					((FuncContext)_localctx).returnType2 = type(0);
					_localctx.ast.pushReturnType(((FuncContext)_localctx).returnType2.ast);
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(92);
			match(OPEN_BRACE);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENTIFIER) | (1L << IF_KEYWORD) | (1L << ITERATE_KEYWORD) | (1L << READ_KEYWORD) | (1L << PRINT_KEYWORD) | (1L << RETURN_KEYWORD) | (1L << OPEN_BRACE))) != 0)) {
				{
				setState(93);
				((FuncContext)_localctx).cmd = cmd();
				_localctx.ast.pushCommand(((FuncContext)_localctx).cmd.ast);
				}
			}

			setState(98);
			match(CLOSE_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<Parameter> ast;
		public Token id1;
		public TypeContext type1;
		public Token id2;
		public TypeContext type2;
		public List<TerminalNode> TYPE_ASSIGNMENT() { return getTokens(ParserParser.TYPE_ASSIGNMENT); }
		public TerminalNode TYPE_ASSIGNMENT(int i) {
			return getToken(ParserParser.TYPE_ASSIGNMENT, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ParserParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ParserParser.IDENTIFIER, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ParserParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ParamsContext)_localctx).ast =  new ArrayList<Parameter>();
			setState(101);
			((ParamsContext)_localctx).id1 = match(IDENTIFIER);
			setState(102);
			match(TYPE_ASSIGNMENT);
			setState(103);
			((ParamsContext)_localctx).type1 = type(0);
			_localctx.ast.add(new Parameter((((ParamsContext)_localctx).id1!=null?((ParamsContext)_localctx).id1.getLine():0), (((ParamsContext)_localctx).id1!=null?((ParamsContext)_localctx).id1.getCharPositionInLine():0), (((ParamsContext)_localctx).id1!=null?((ParamsContext)_localctx).id1.getText():null), ((ParamsContext)_localctx).type1.ast));
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(105);
				match(COMMA);
				setState(106);
				((ParamsContext)_localctx).id2 = match(IDENTIFIER);
				setState(107);
				match(TYPE_ASSIGNMENT);
				setState(108);
				((ParamsContext)_localctx).type2 = type(0);
				_localctx.ast.add(new Parameter((((ParamsContext)_localctx).id2!=null?((ParamsContext)_localctx).id2.getLine():0), (((ParamsContext)_localctx).id2!=null?((ParamsContext)_localctx).id2.getCharPositionInLine():0), (((ParamsContext)_localctx).id2!=null?((ParamsContext)_localctx).id2.getText():null), ((ParamsContext)_localctx).type2.ast));
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext type1;
		public BtypeContext btype;
		public BtypeContext btype() {
			return getRuleContext(BtypeContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(ParserParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(ParserParser.CLOSE_BRACKET, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}
